feat(#154): fill docs/skills/{overview,core-skills,tool-skills,creating-skills}.md
Replace the four 'Coming Soon' stubs with production-ready reference
pages. Overview covers the three categories, sf-* naming convention,
location in monorepo vs multirepo, and the CLI entry points. Core
skills walks each of the 7 always-installed skills with a real use
case. Tool skills splits public-API vs authenticated and documents the
multi-account credentials system (~/.claude/credentials/<tool>/<acc>.env
+ skillsAccounts in manifest + sf tools CLI). Creating skills gives a
concrete end-to-end recipe for a custom deploy-preview skill including
front-matter, allowed-tools, preconditions pattern, and how to graduate
into the SaaSFoundry catalogue.